# zerox-client-rs

./: Cargo.toml  README.md
.openapi-generator/: FILES
docs/: BuyTokenNotAuthorizedForTrade.md  BuyTokenNotAuthorizedForTradeData.md  GaslessApi.md  GaslessGetPrice200Response.md  GaslessGetPrice200ResponseAnyOf.md  GaslessGetPrice400Response.md  GaslessGetQuote200Response.md  GaslessGetQuote200ResponseAnyOf.md  GaslessGetQuote200ResponseAnyOfApproval.md  GaslessGetQuote200ResponseAnyOfApprovalEip712.md  GaslessGetQuote200ResponseAnyOfTrade.md  GaslessGetQuote200ResponseAnyOfTradeEip712.md  GaslessGetQuote400Response.md  GaslessGetStatus200Response.md  GaslessGetStatus200ResponseAnyOf.md  GaslessGetStatus200ResponseAnyOf1.md  GaslessGetStatus200ResponseAnyOfApprovalTransactionsInner.md  GaslessSubmit200Response.md  GaslessSubmit400Response.md  GaslessSubmitRequest.md  GaslessSubmitRequestApproval.md  GaslessSubmitRequestApprovalEip712.md  GaslessSubmitRequestApprovalEip712AnyOf.md  GaslessSubmitRequestApprovalEip712AnyOf1.md  GaslessSubmitRequestApprovalEip712AnyOf1Message.md  GaslessSubmitRequestApprovalEip712AnyOf2.md  GaslessSubmitRequestApprovalEip712AnyOf2Message.md  GaslessSubmitRequestApprovalEip712AnyOf2Types.md  GaslessSubmitRequestApprovalEip712AnyOfMessage.md  GaslessSubmitRequestApprovalEip712AnyOfTypes.md  GaslessSubmitRequestApprovalSignature.md  GaslessSubmitRequestTrade.md  GaslessSubmitRequestTradeEip712.md  GaslessSubmitRequestTradeEip712Message.md  GaslessSubmitRequestTradeEip712MessagePermitted.md  InputInvalid.md  InputInvalidData.md  (+54 more)
(+94 files in other folders)
